--- a/app/src/main/res/layout/parameters.xml
+++ b/app/src/main/res/layout/parameters.xml
@@ -98,4 +98,36 @@
             android:onClick="onRadioButtonClicked"
             android:text="Method C" />
     </RadioGroup>
+
+    <TextView
+        android:id="@+id/labelSpeechSpeed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="76dp"
+        android:layout_marginEnd="20dp"
+        android:text="Speech Speed"
+        app:layout_constraintEnd_toStartOf="@+id/inputSpeechSpeed"
+        app:layout_constraintTop_toBottomOf="@+id/labelSteps" />
+
+    <Button
+        android:id="@+id/buttonSpeechSpeed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="36dp"
+        android:text="Submit"
+        app:layout_constraintStart_toEndOf="@+id/inputSpeechSpeed"
+        app:layout_constraintTop_toBottomOf="@+id/buttonStepLength" />
+
+    <EditText
+        android:id="@+id/inputSpeechSpeed"
+        android:layout_width="55dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="180dp"
+        android:ems="10"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/inputStepLength" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
